sort.pancake.BasicPancake.scala.error
Erreur de compilation :
BasicPancake:6: error: unclosed character literal
    print (b +'  t')
              ^BasicPancake:6: error: unclosed character literal
    print (b +'  t')
                  ^BasicPancake:6: error: ')' expected but something found.
    print (b +'  t')
              ^